fixed user card misalignment in the thread followers modal

--- a/app/assets/stylesheets/comment_threads.scss
+++ b/app/assets/stylesheets/comment_threads.scss
@@ -25,3 +25,13 @@
     text-align: center;
   }
 }
+
+.thread-followers-list {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75em;
+
+  .user-card--content {
+    max-width: 75%;
+  }
+}
